# YATM

./: .gitignore  LICENSE  README.md  external.js  external.ts  index.css  index.html  index.ts  json_io.js  json_io.ts  main.js  package-lock.json  package.json  skillForm.html  skillTaskWindow.html  skillTaskWindow.ts  skills.css  skills.html  skills.ts  styling-tools.css  taskForm.html  tasks.html  tasks.js  tasks.ts  tsconfig.json
datastructs/: char.ts  index.ts  skills.ts  tasks.ts
datastructures/: char.js  char.ts  index.js  index.ts  package.json  skills.js  skills.ts  tasks.js  tasks.ts
local_modules/rust_core/: README.md  package.json
local_modules/rust_core/lib/: index.js
local_modules/rust_core/native/: Cargo.toml  artifacts.json  index.node
local_modules/rust_core/native/src/: json_io.rs  lib.rs  skill.rs  task.rs
saves/: char.default  character.json  empty.json  pres.save  pres.saveback
skills/: skillForm.html  skillForm.ts  skillTaskWindow.html  skillTaskWindow.ts  skills.css  skills.html  skills.ts
tasks/: taskForm.html  taskForm.ts  tasks.css  tasks.html  tasks.ts
