[package]
name = "rust_core"
version = "0.1.0"
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "rust_core"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.7.1"
chrono = "0.4"

[dependencies]
neon = "0.7.1"
num_cpus = "1.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
